fixing the logout

--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -47,7 +47,13 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
+
+
+      <form class="form-inline" method="post" asp-action="Logout" asp-controller="User" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="nav-link btn btn-link ">
+                        Logout
+                    </button>
+                </form>
                             </li>
                         }
                         else
