get user details and delete user ( Admin)

--- a/ClientAstree/Views/User/index.cshtml
+++ b/ClientAstree/Views/User/index.cshtml
@@ -23,7 +23,7 @@
                                 <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
                                 <th class="text-center">@Html.DisplayNameFor(model => model.Email)</th>
                                 <th class="text-center">@Html.DisplayNameFor(model => model.CIN)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.Role)</th>
+                                <th class="text-center">@Html.DisplayNameFor(model => model.Roles)</th>
                                 <th class="text-center">@Html.DisplayNameFor(model => model.PhoneNumber)</th>
                                 <th class="text-center">@Html.DisplayNameFor(model => model.Gender)</th>
                                 <th class="text-center"></th>
@@ -35,7 +35,7 @@
                                 <td class="text-center">@Html.DisplayFor(modelItem => item.Id)</td>
                                 <td class="text-center">@Html.DisplayFor(modelItem => item.Email)</td>
                                 <td class="text-center">@Html.DisplayFor(modelItem => item.CIN)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.Role)</td>
+                                <td class="text-center">@Html.DisplayFor(modelItem => item.Roles)</td>
                                 <td class="text-center">@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
                                 <td class="text-center">@Html.DisplayFor(modelItem => item.Gender)</td>
                                 <td class="text-center" style="display: flex; align-items: center; justify-content: center;">
