--- a/ClientAstree/Views/User/Details.cshtml
+++ b/ClientAstree/Views/User/Details.cshtml
@@ -26,8 +26,8 @@
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.PhoneNumber)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.PhoneNumber)</dd>
 
-        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Role)</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.Role)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Roles)</dt>
+        <dd class="col-sm-10">@Html.DisplayFor(model => model.Roles)</dd>
 
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.CIN)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.CIN)</dd>
