--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
         </nav>
     </header>
     <div>
-        <main role="main" class=" my-0 py-0"></main>
+        <main role="main" class=" my-0 py-0">
             @RenderBody()
         </main>
     </div>
