--- a/ClientAstree/Views/User/index.cshtml
+++ b/ClientAstree/Views/User/index.cshtml
@@ -10,6 +10,7 @@
             <small>Users</small>
         </h3>
     </div>
+      @Html.Partial("_SideMenu")
     <div class="row">
         <div class="card card-plain">
             <div class="card-body">
