--- a/ClientAstree/Views/Shared/_Layout.cshtml.css
+++ b/ClientAstree/Views/Shared/_Layout.cshtml.css
@@ -45,5 +45,7 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  z-index: 1000;
+  background-color: white;
 }
 
