--- a/ClientAstree/Views/User/Details.cshtml
+++ b/ClientAstree/Views/User/Details.cshtml
@@ -4,9 +4,24 @@
     ViewData["Title"] = "User Details";
 }
 
-<div class="container">
-<h1>User Details</h1>
+<div class="container-fluid">
+    <div class="row">
+        <!-- Side Menu on the left -->
+        <div class="col-md-2 py-0 my-0 px-0 mx-0">
+            @Html.Partial("_SideMenu")
+        </div>
 
+        <!-- Main Content Area -->
+        <div class="col-md-10">
+                        <div class="title">
+<nav aria-label="breadcrumb" role="navigation">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">Admin</li>
+    <li class="breadcrumb-item" aria-current="page">Users</li>
+       <li class="breadcrumb-item active" aria-current="page">UserDetails</li>
+  </ol>
+</nav>
+            </div>
 <div>
     <h4>User Information</h4>
     <hr />
@@ -49,5 +64,7 @@
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     <a asp-action="Index">Back to List</a>
+</div>
+</div>
 </div>
 </div>
