--- a/ClientAstree/Views/User/index.cshtml
+++ b/ClientAstree/Views/User/index.cshtml
@@ -4,63 +4,69 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container">
-    <div class="title">
-        <h3>
-            <small>Users</small>
-        </h3>
-    </div>
-      @Html.Partial("_SideMenu")
+<div class="container-fluid">
     <div class="row">
-        <div class="card card-plain">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <p>
-                        <a asp-action="Create">Create New</a>
-                    </p>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.Email)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.CIN)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.Roles)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.PhoneNumber)</th>
-                                <th class="text-center">@Html.DisplayNameFor(model => model.Gender)</th>
-                                <th class="text-center"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model) {
-                            <tr>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.Id)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.Email)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.CIN)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.Roles)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
-                                <td class="text-center">@Html.DisplayFor(modelItem => item.Gender)</td>
-                                <td class="text-center" style="display: flex; align-items: center; justify-content: center;">
-                                    <!-- Details Button -->
-                                    <form asp-action="Details" asp-route-id="@item.Id" method="post">
-                                        <button type="submit" class="btn btn-success btn-icon btn-sm btn-neutral" rel="tooltip">
-                                            <i class="bi bi-person-fill"></i>
-                                        </button>
-                                    </form>
-                                    <!-- Edit Button -->
-                                    <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-info btn-icon btn-xl btn-neutral" rel="tooltip" style="height: 40px; line-height: 40px;">
-                                        <i class="bi bi-gear-fill"></i>
-                                    </a>
-                                    <!-- Delete Button -->
-                                    <form asp-action="Delete" asp-route-id="@item.Id" method="post">
-                                        <button type="submit" class="btn btn-danger btn-icon btn-sm btn-neutral" rel="tooltip" onclick="return confirm('Are you sure you want to delete this record?')">
-                                            <i class="bi bi-trash"></i>
-                                        </button>
-                                    </form>
-                                </td>
-                            </tr>
-                            }
-                        </tbody>
-                    </table>
+        <!-- Side Menu on the left -->
+        <div class="col-md-2 py-0 my-0 px-0 mx-0">
+            @Html.Partial("_SideMenu")
+        </div>
+
+        <!-- Main Content Area -->
+        <div class="col-md-10">
+            <div class="title">
+<nav aria-label="breadcrumb" role="navigation">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">Admin</li>
+    <li class="breadcrumb-item active" aria-current="page">Users</li>
+  </ol>
+</nav>
+            </div>
+
+            <div class="card card-plain">
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <p><a asp-action="Create">Create New</a></p>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.Email)</th>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.CIN)</th>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.Roles)</th>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.PhoneNumber)</th>
+                                    <th class="text-center">@Html.DisplayNameFor(model => model.Gender)</th>
+                                    <th class="text-center"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model) {
+                                    <tr>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.Id)</td>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.Email)</td>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.CIN)</td>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.Roles)</td>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
+                                        <td class="text-center">@Html.DisplayFor(modelItem => item.Gender)</td>
+                                        <td class="text-center">
+                                            <form asp-action="Details" asp-route-id="@item.Id" method="post">
+                                                <button type="submit" class="btn btn-success btn-icon btn-sm btn-neutral" rel="tooltip">
+                                                    <i class="bi bi-person-fill"></i>
+                                                </button>
+                                            </form>
+                                            <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-info btn-icon btn-xl btn-neutral" rel="tooltip" style="height: 40px; line-height: 40px;">
+                                                <i class="bi bi-gear-fill"></i>
+                                            </a>
+                                            <form asp-action="Delete" asp-route-id="@item.Id" method="post">
+                                                <button type="submit" class="btn btn-danger btn-icon btn-sm btn-neutral" rel="tooltip" onclick="return confirm('Are you sure you want to delete this record?')">
+                                                    <i class="bi bi-trash"></i>
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
